[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAS-004_RPI-Databridge"
version = "0.1.0"
description = "Reliable HTTPS send/receive on Raspberry Pi PLC with persistent inbox/outbox + watchdog + web UI"
# Runtime minimum for the Raspberry Pi PLC remains Python 3.9.x. For local Windows development, use Python 3.13.x.
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.0",
  "ping3>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
mas004-databridge = "mas004_rpi_databridge.service:main"

[tool.setuptools]
packages = ["mas004_rpi_databridge"]

[tool.setuptools.package-data]
mas004_rpi_databridge = ["assets/*.jpg"]
